Add [[discuss]] feature

--- a/src/templates/document.hbs
+++ b/src/templates/document.hbs
@@ -9,7 +9,7 @@
   <link rel='stylesheet' href='/bundle.css'>
   {{/if}}
 </head>
-<body data-template='markdown-file'>
+<body data-template='document'>
   <main>
     <header role='main'>
       <a id='go-parent' href='.' title='Go to parent'>↵</a>
