--- a/src/index.scss
+++ b/src/index.scss
@@ -39,4 +39,6 @@ $max-width: 800px;
 
 @import 'templates/authenticate';
 @import 'templates/directory';
-@import 'templates/markdown-file';
+@import 'templates/document';
+
+@import 'components/Discuss';
