Add front matter syntax support

--- a/src/templates/directory.hbs
+++ b/src/templates/directory.hbs
@@ -18,8 +18,23 @@
     <h1>{{ title }}</h1>
     <ul class='entries'>
       {{#each entries}}
-      <li class='{{#if this.isDirectory}}is-directory{{/if}} {{#if this.isLocked}}is-locked{{/if}}'>
-        <a href='{{ this.url }}' title='{{ this.name }}'>{{ plaintext this.title }}</a>
+      <li
+        class='
+          entry
+          {{#if this.isDirectory}}is-directory{{/if}}
+          {{#if this.isLocked}}is-locked{{/if}}
+        '
+      >
+        <a href='{{ this.filename }}' title='{{ this.title }}'>
+          {{#if this.title}}
+            {{ plaintext this.title }}
+          {{else}}
+            {{ this.filename }}{{ this.extension }}
+          {{/if}}
+        </a>
+        <div class='description'>
+          {{ this.description }}
+        </div>
       </li>
       {{/each}}
     </ul>
