--- a/src/templates/document.scss
+++ b/src/templates/document.scss
@@ -49,6 +49,7 @@ body[data-template=document] {
   }
 
   footer[role=main] {
+    align-items: flex-end;
     margin: 10rem 0 var(--gutter) 0;
     padding-top: calc(2 * var(--gutter));
     border-top: 1px solid var(--color--border);
