Add support for author in frontmatter block

--- a/src/templates/document.hbs
+++ b/src/templates/document.hbs
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html {{#if lang}}lang='{{ lang }}'{{/if}}>
+<html {{#if lang}}lang='{{lang}}'{{/if}}>
 <head>
   <meta charset='utf-8'>
   <title>
     {{#if title}}
-      {{ plaintext title }}
+      {{plaintext title}}
     {{else}}
-      {{ filename }}{{ extension }}
+      {{filename}}{{extension}}
     {{/if}}
   </title>
 
   {{#if description}}
-  <meta name='description' content='{{ plaintext description }}'>
+  <meta name='description' content='{{plaintext description}}'>
   {{/if}}
 
   {{#if icon}}
-  <link rel='icon' href='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{ icon }}</text></svg>'>
+  <link rel='icon' href='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{icon}}</text></svg>'>
   {{else}}
   <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -33,25 +33,34 @@
 <body data-template='document'>
   <main>
     <header role='main'>
-      <a id='go-parent' href='.'>{{ dirname }}</a>
+      <a id='go-parent' href='.'>{{dirname}}</a>
       <label for='toggleToc'>☰</label>
     </header>
 
     <input type='checkbox' id='toggleToc' name='toggleToc'>
     <ul class='toc'>
       {{#each toc}}
-        <li data-depth='{{ this.lvl }}'>
-          <a href='#{{ this.slug }}'>{{{ this.markdown }}}</a>
+        <li data-depth='{{this.lvl}}'>
+          <a href='#{{this.slug}}'>{{{this.markdown}}}</a>
         </li>
       {{/each}}
     </ul>
 
-    {{{ markdown }}}
+    {{{markdown}}}
 
     <footer role='main'>
       <div class='meta'>
-        <time datetime='{{ lastmod }}'>{{ date lastmod 'YYYY-MM-DD' }}</time>
-        <div class='license'>{{ license }}</div>
+        {{#if author}}
+          <div class='author'>
+            {{#if author.website}}
+              <a href='{{author.website}}'>{{author.name}}</a>
+            {{else}}
+              {{author.name}}
+            {{/if}}
+          </div>
+        {{/if}}
+        <time datetime='{{lastmod}}'>{{date lastmod 'YYYY-MM-DD'}}</time>
+        <div class='license'>{{license}}</div>
       </div>
       <a id='go-top' href='#' title='Go up'>↑</a>
     </footer>
