--- a/src/templates/document.scss
+++ b/src/templates/document.scss
@@ -1,6 +1,6 @@
 body[data-template=document] {
-  header[role=main],
-  footer[role=main] {
+  nav,
+  footer {
     @include no-select;
     display: flex;
     justify-content: space-between;
@@ -24,11 +24,13 @@ body[data-template=document] {
   .toc {
     @include no-select;
     border-bottom: 1px solid var(--color--border);
-
-    list-style: none;
-    margin: var(--gutter) 0;
-    padding: var(--gutter) 0;
     font-size: var(--font-size--small);
+    margin: var(--gutter) 0;
+
+    ul {
+      list-style: none;
+      padding: var(--gutter) 0;
+    }
 
     li {
       margin-bottom: 0.5em;
@@ -48,14 +50,14 @@ body[data-template=document] {
     display: none;
   }
 
-  footer[role=main] {
+  footer {
     align-items: flex-end;
     margin: 10rem 0 var(--gutter) 0;
     padding-top: calc(2 * var(--gutter));
     border-top: 1px solid var(--color--border);
   }
 
-  .footnotes ~ footer[role=main] {
+  .footnotes ~ footer {
     border: 0;
     margin-top: var(--gutter);
     padding-top: var(--gutter);
